--- a/config/locales/views/rules/ru.yml
+++ b/config/locales/views/rules/ru.yml
@@ -82,6 +82,7 @@ ru:
       title_with_name: "Редактирование правила для %{resource} \"%{name}\""
     new:
       title: "Новое правило для %{resource}"
+      submit: Создать правило
     recent_runs:
       title: Последние запуски
       description: История выполнения ваших правил, включая статус успеха/ошибки и количество затронутых транзакций.
