--- a/config/locales/views/shared/ru.yml
+++ b/config/locales/views/shared/ru.yml
@@ -14,3 +14,7 @@ ru:
       syncing: Синхронизация данных счетов...
     trend_change:
       no_change: "без изменений"
+    transaction_tabs:
+      expense: "Расход"
+      income: "Доход"
+      transfer: "Перевод"
