--- a/config/locales/views/pages/ru.yml
+++ b/config/locales/views/pages/ru.yml
@@ -55,6 +55,8 @@ ru:
         no_data_title: "Нет данных о движении средств за этот период"
         no_data_description: "Добавьте транзакции или измените период отображения"
         add_transaction: "Добавить транзакцию"
+        cash_flow_node: "Денежный поток"
+        surplus_node: "Излишек"
       no_accounts:
         title: "Счетов пока нет"
         description: "Добавьте счета для отображения чистого капитала"
