--- a/config/locales/views/valuations/ru.yml
+++ b/config/locales/views/valuations/ru.yml
@@ -28,6 +28,31 @@ ru:
       amount_label: "Стоимость счета на дату"
       update_value: "Обновить стоимость"
       date_label: Дата
+    names:
+      opening_anchor:
+        property: "Цена покупки"
+        vehicle: "Цена покупки"
+        loan: "Начальная сумма кредита"
+        investment: "Начальная стоимость счета"
+        crypto: "Начальная стоимость счета"
+        other_asset: "Начальная стоимость счета"
+        default: "Начальный баланс"
+      current_anchor:
+        property: "Текущая рыночная стоимость"
+        vehicle: "Текущая рыночная стоимость"
+        loan: "Текущий остаток кредита"
+        investment: "Текущая стоимость счета"
+        crypto: "Текущая стоимость счета"
+        other_asset: "Текущая стоимость счета"
+        default: "Текущий баланс"
+      recon:
+        property: "Обновление стоимости вручную"
+        vehicle: "Обновление стоимости вручную"
+        loan: "Обновление остатка вручную"
+        investment: "Обновление стоимости вручную"
+        crypto: "Обновление стоимости вручную"
+        other_asset: "Обновление стоимости вручную"
+        default: "Обновление баланса вручную"
       delete: Удалить
       delete_subtitle: Это действие нельзя отменить
       delete_title: Удалить запись
