--- a/config/locales/views/chats/ru.yml
+++ b/config/locales/views/chats/ru.yml
@@ -3,6 +3,12 @@ ru:
   chats:
     demo_banner_title: "Активен демо-режим"
     demo_banner_message: "Вы используете открытую модель Qwen3 LLM с кредитами от Cloudflare Workers AI. Результаты могут отличаться, так как кодовая база тестировалась в основном на `gpt-4.1`, но ваши данные никуда не отправляются для обучения! 🤖"
+    new:
+      new_chat: "Новый чат %{date}"
+    update:
+      success: "Чат обновлен"
+    destroy:
+      success: "Чат был успешно удален"
     index:
       title: Чаты
       new_chat: Новый чат
