--- a/config/locales/views/holdings/en.yml
+++ b/config/locales/views/holdings/en.yml
@@ -5,6 +5,7 @@ en:
       brokerage_cash: Brokerage cash
     destroy:
       success: Holding deleted
+      cannot_delete: You cannot delete this holding
     update:
       success: Cost basis saved.
       error: Invalid cost basis value.
