--- a/config/locales/views/subscriptions/ru.yml
+++ b/config/locales/views/subscriptions/ru.yml
@@ -12,6 +12,7 @@ ru:
         monthly: "Ежемесячный"
     upgrade:
       title: Обновление
+      already_contributing: "Вы уже поддерживаете проект. Спасибо!"
       account_settings: Настройки аккаунта
       sign_out: Выйти
       contribute_and_support_sure: "Сделать взнос и поддержать Sure"
@@ -27,3 +28,10 @@ ru:
         many: "Ваши данные будут удалены через %{count} дней"
         other: "Ваши данные будут удалены через %{count} дня"
       trial_over: "Ваш пробный период закончился"
+  subscriptions:
+    create:
+      welcome: "Добро пожаловать в Sure!"
+      trial_error: "Вы уже начали или завершили пробный период. Пожалуйста, перейдите на платный тариф, чтобы продолжить."
+    success:
+      contribution_success: "Добро пожаловать в Sure! Мы ценим вашу поддержку."
+      contribution_error: "Что-то пошло не так при обработке вашего взноса. Пожалуйста, попробуйте еще раз."
