--- a/config/locales/views/transactions/en.yml
+++ b/config/locales/views/transactions/en.yml
@@ -1,6 +1,10 @@
 ---
 en:
   transactions:
+    create:
+      success: Transaction created
+    update:
+      updated: Transaction updated
     unknown_name: Unknown transaction
     form:
       account: Account
