--- a/config/locales/views/users/ru.yml
+++ b/config/locales/views/users/ru.yml
@@ -7,6 +7,8 @@ ru:
       email_change_failed: Не удалось изменить адрес электронной почты.
       email_change_initiated: Пожалуйста, проверьте ваш новый адрес электронной почты для получения инструкций по подтверждению.
       success: Ваш профиль был обновлен.
+      ai_enabled: "ИИ-ассистент успешно включен."
+      ai_disabled: "ИИ-ассистент отключен."
     resend_confirmation_email:
       success: Новое письмо с подтверждением поставлено в очередь на отправку.
       no_pending_change: В данный момент нет ожидающих изменений email!
