--- a/config/locales/views/accounts/ru.yml
+++ b/config/locales/views/accounts/ru.yml
@@ -164,6 +164,23 @@ ru:
       not_linked: "Счет не привязан к провайдеру"
       error: "Не удалось отвязать счет: %{error}"
       generic_error: "Произошла непредвиденная ошибка. Пожалуйста, попробуйте еще раз."
+  depositories:
+    subtypes:
+      checking:
+        short: "Checking"
+        long: "Текущий счет"
+      savings:
+        short: "Savings"
+        long: "Сберегательный счет"
+      hsa:
+        short: "HSA"
+        long: "Медицинский сберегательный счет"
+      cd:
+        short: "CD"
+        long: "Депозитный сертификат"
+      money_market:
+        short: "MM"
+        long: "Счет денежного рынка"
     select_provider:
       title: Выберите провайдера для привязки
       description: "Выберите провайдера, которого вы хотите использовать для привязки %{account_name}"
